--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-config": "^1.0.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.2"
+  }
 }
